--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "xatlas-web",
-  "version": "1.0.0",
+  "name": "@agrande/xatlas-web",
+  "version": "1.0.1",
   "main": "dist/xatlas-web.js",
   "files": [
     "dist/"
   ],
-  "repository": "https://github.com/mozillareality/xatlas-web.git",
+  "repository": "https://github.com/agrande/xatlas-web.git",
   "author": "Robert Long <robert@robertlong.me>",
   "license": "MIT",
   "scripts": {
