--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@agrande/xatlas-web",
+  "name": "@gfodor/xatlas-web",
   "version": "1.3.0",
   "main": "dist/xatlas-web.js",
   "files": [
